--- a/themes/hyde/layouts/_default/single/index.html
+++ b/themes/hyde/layouts/_default/single/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> Posts &middot; My New Hugo Site </title>
+  <title>  &middot; My New Hugo Site </title>
 
   
   <link rel="stylesheet" href="http://caijing.github.io/css/poole.css">
@@ -21,12 +21,11 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="http://caijing.github.io/post/index.xml" rel="alternate" type="application/rss+xml" title="My New Hugo Site" />
+  <link href="" rel="alternate" type="application/rss+xml" title="My New Hugo Site" />
 </head>
 
-<body class="">
-
-<div class="sidebar">
+	<body class="">
+		<div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <a href="http://caijing.github.io/"><h1>My New Hugo Site</h1></a>
@@ -47,14 +46,34 @@
 </div>
 
 
-  <div class="content container">
-    <ul class="posts">
-        
-        <li>
-          <span><a href="http://caijing.github.io/post/first/">first</a> <time class="pull-right post-list">Wed, Apr 20, 2016</time></span>
-        </li>
-        
-    </ul>
-  </div>
-</body>
+		<div class="content container">
+			<div class="post">
+			 	<h1></h1>
+			  <span class="post-date">Mon, Jan 1, 0001</span>
+			      partial "head.html" . }}
+	<body class="{{ .Site.Params.themeColor }}">
+		{{ partial "sidebar.html" . }}
+
+		<div class="content container">
+			<div class="post">
+			 	<h1>{{ .Title }}</h1>
+			  <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+			      {{ .Content }}
+			</div>
+
+			{{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
+				<h2>Comments</h2>
+				{{ partial "disqus" . }}
+			{{ end }}
+		</div>
+
+  </body>
+</html>
+
+			</div>
+
+			
+		</div>
+
+  </body>
 </html>
