--- a/themes/hyde/layouts/partials/head/index.html
+++ b/themes/hyde/layouts/partials/head/index.html
@@ -8,12 +8,12 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>  &middot; My New Hugo Site </title>
+  <title>  &middot; Never But Life </title>
 
   
-  <link rel="stylesheet" href="http://caijing.github.io/css/poole.css">
-  <link rel="stylesheet" href="http://caijing.github.io/css/syntax.css">
-  <link rel="stylesheet" href="http://caijing.github.io/css/hyde.css">
+  <link rel="stylesheet" href="http://caijing.github.io/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/css/poole.css">
+  <link rel="stylesheet" href="http://caijing.github.io/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/css/syntax.css">
+  <link rel="stylesheet" href="http://caijing.github.io/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -21,5 +21,5 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="" rel="alternate" type="application/rss+xml" title="My New Hugo Site" />
+  <link href="" rel="alternate" type="application/rss+xml" title="Never But Life" />
 </head>
