--- a/themes/hyde/layouts/partials/sidebar/index.html
+++ b/themes/hyde/layouts/partials/sidebar/index.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://caijing.github.io/"><h1>My New Hugo Site</h1></a>
+      <a href="http://caijing.github.io/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/"><h1>Never But Life</h1></a>
       <p class="lead">
       An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
       </p>
@@ -10,7 +10,9 @@
     <ul class="sidebar-nav">
       <li><a href="/">Home</a> </li>
       
-        <li><a href="/themes/hyde/archetypes/default/">  </a></li>
+        <li><a href="/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/themes/hyde/archetypes/default/">  </a></li>
+      
+        <li><a href="/%0A%0Ahugo%20--theme=hugo-multi-bootswatch%20--baseUrl=http:/caijing.github.io/content/welcome/"> 你好，Hugo </a></li>
       
     </ul>
 
