--- a/themes/hyde/layouts/partials/head/index.html
+++ b/themes/hyde/layouts/partials/head/index.html
@@ -11,9 +11,9 @@
   <title>  &middot; Never But Life </title>
 
   
-  <link rel="stylesheet" href="http://caijing.github.iocss/poole.css">
-  <link rel="stylesheet" href="http://caijing.github.iocss/syntax.css">
-  <link rel="stylesheet" href="http://caijing.github.iocss/hyde.css">
+  <link rel="stylesheet" href="http://ljxxcaijing.github.io/css/poole.css">
+  <link rel="stylesheet" href="http://ljxxcaijing.github.io/css/syntax.css">
+  <link rel="stylesheet" href="http://ljxxcaijing.github.io/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
