--- a/themes/hyde/layouts/partials/sidebar/index.html
+++ b/themes/hyde/layouts/partials/sidebar/index.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://caijing.github.io"><h1>Never But Life</h1></a>
+      <a href="http://ljxxcaijing.github.io/"><h1>Never But Life</h1></a>
       <p class="lead">
       An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
       </p>
